[package]
name = "rest-latency"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
prometheus = "0.14"
axum = "0.8.4"
shellexpand = "2"
dotenvy = "0.15.7"
chrono = "0.4.41"
signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
signal-hook = "0.3.13"
futures = "0.3.31"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[[bin]]
name = "cache"
path = "src/cache_helper.rs"

[[bin]]
name = "server"
path = "src/main.rs"
